Fixed game structure on mobile.

--- a/src/Components/LetterBank/LetterBank.css
+++ b/src/Components/LetterBank/LetterBank.css
@@ -15,7 +15,7 @@ div.letter-tile {
   padding: 8px 5px;
   text-align: center;
   align-self: center;
-  width: 6%;
+  width: 5.5%;
   margin: 0 5px 5px;
   border-radius: 10px;
   cursor: pointer;
